# powerbus

./: .gitignore  .gitmodules
anachro-485/: Cargo.toml
anachro-485/src/: dispatch.rs  dom.rs  icd.rs  lib.rs  sub.rs  timing.rs
anachro-485/src/dom/: discover.rs  mod.rs  ping.rs  token.rs
anachro-485/src/sub/: discover.rs  mod.rs  ping.rs  token.rs
anachro-boot/: Cargo.toml  make-images.sh  memory-app.x  memory-bl.x  memory.x
anachro-boot/.cargo/: config.toml
anachro-boot/src/: bootdata.rs  bootload.rs  consts.rs  lib.rs
anachro-boot/test-images/: blink_1_app  blink_1_app.hex  blink_1_app.toml  blink_2_app  blink_2_app.hex  blink_2_app.toml
anachro-boot/testsuite/: Cargo.toml
anachro-boot/testsuite/src/: lib.rs
anachro-boot/testsuite/tests/: test.rs
anachro-qspi/: Cargo.toml
anachro-qspi/src/: lib.rs
boot-chonker/: .gitignore  Cargo.toml
boot-chonker/src/: lib.rs  main.rs
byte-slab/: Cargo.toml  README.md
byte-slab-derive/: Cargo.toml
byte-slab-derive/src/: lib.rs
byte-slab/src/: byte_slab.rs  lib.rs  managed_arc_slab.rs  slab_arc.rs  slab_box.rs  slab_slice_arc.rs
defmt-bbq/: Cargo.toml  build.rs
defmt-bbq/src/: lib.rs
hardware-bringup/: Cargo.toml
hardware-bringup/.cargo/: config.toml
hardware-bringup/src/: lib.rs
hardware-bringup/testsuite/: Cargo.toml
hardware-bringup/testsuite/src/: lib.rs
hardware-bringup/testsuite/tests/: test.rs
notes/: 2021-08-22-alloc-thoughts.md  2021-09-04-layout-thoughts.md  2021-10-10-bootloader-thoughts.md
postcard-slab/: Cargo.toml  README.md
postcard-slab/src/: main.rs
sim-485/: Cargo.toml
sim-485/src/: groundhog_sim.rs  lib.rs
sim-bus-driver/: Cargo.toml
tester/: Cargo.toml
tester/src/: main.rs
uarte-485/: Cargo.toml
uarte-485/src/: lib.rs
