[package]
name = "anachro-485"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "0.7.2"
groundhog = "0.2.5"
heapless = "0.7.5"

[dependencies.spin]
version = "0.9.2"
default-features = false
features = ["mutex", "spin_mutex"]

[dependencies.byte-slab]
path = "../byte-slab"

[dependencies.rand]
version = "0.8.4"
default-features = false

[dependencies.futures]
version = "0.3.16"
default-features = false

[dependencies.serde]
version = "1.0.127"
default-features = false
features = ["derive"]

[dependencies.cobs]
version = "0.1.5-pre"
default-features = false
package = "postcard-cobs"
