[package]
name = "boot-chonker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poly1305 = "0.7.2"
toml = "0.5.8"
base64 = "0.13.0"
structopt = "0.3.23"

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.anachro-boot]
# TODO: This only works for the private `powerbus-mini` project!
# Move bootloader definitions to a public crate in the `powerbus` repo!
path = "../../../bootloader"
