[package]
name = "byte-slab-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.34"
synstructure = "0.12.6"
quote = "1.0.10"

[dependencies.byte-slab]
version = "0.1.5"
path = "../byte-slab"
