[package]
name = "byte-slab-derive"
version = "0.2.1"
edition = "2021"
description = "Derive macros for a statically allocated slab of bytes"
repository = "https://github.com/anachro-rs/powerbus"
authors = ["James Munns <james@onevariable.com>"]

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.34"
synstructure = "0.12.6"
quote = "1.0.10"
syn = "1.0.82"

[dependencies.byte-slab]
version = "0.2.0"
path = "../byte-slab"
