[package]
name = "byte-slab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.5"

[dependencies.serde]
version = "1.0.128"
default-features = false

[features]
# Enables the use of >= 254 elements in the slab
usize_queue = ["heapless/mpmc_large"]
default = ["usize_queue"]
