[package]
name = "byte-slab"
version = "0.1.3"
description = "A statically allocated slab of bytes"
repository = "https://github.com/anachro-rs/powerbus"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.7.5"

[dependencies.serde]
version = "1.0.128"
default-features = false

[features]
# Enables the use of >= 254 elements in the slab
usize_queue = ["heapless/mpmc_large"]
default = ["usize_queue"]
