[package]
authors = [
    "James Munns <james@onevariable.com>",
    "The Knurling-rs developers",
]
categories = ["embedded", "no-std"]
description = "A generic bbqueue based transport for defmt log messages"
edition = "2021"
keywords = [
    "knurling",
    "defmt",
    "defmt-transport"
]
license = "MIT OR Apache-2.0"
name = "defmt-bbq"
readme = "README.md"
repository = "https://github.com/anachro-rs/powerbus"
version = "0.0.1"

[dependencies]
bbqueue = "0.5.0"
cortex-m = "0.7"
defmt = "0.3"
