[package]
name = "postcard-slab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "0.7.2"

[dependencies.serde]
version = "1.0.128"
features = ["derive"]

[dependencies.byte-slab]
path = "../byte-slab"
