[package]
name = "sim-485"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
groundhog = "0.2.5"
once_cell = "1.8.0"
cassette = "0.2.3"
heapless = "0.7.5"
rand = "0.8.4"

[dependencies.postcard]
version = "0.7.2"
features = ["use-std"]

[dependencies.anachro-485]
path = "../anachro-485"
