[package]
name = "uarte-485"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slab = "0.2.2"
nrf52840-hal = "0.14.0"
defmt = "0.3.0"
groundhog = "0.2.5"

[dependencies.anachro-485]
path = "../anachro-485"

[features]
default = []
